--- a/Steck html and Css/styles/style.css
+++ b/Steck html and Css/styles/style.css
@@ -107,12 +107,9 @@ footer {
 }
 
         footer .row {
-
             display: flex;
             justify-content: space-around;
-            
             height: 100%;
-            
             padding: 10px;
 
         }
@@ -300,6 +297,59 @@ section.form {
     border-right: 2px solid white;
     border-left: 2px solid white;
     border-radius:  30px 30px 0 0 ;
+}
+
+
+
+
+.vac_list{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-auto-rows: 100px 100px;
+}
+
+
+
+
+.gallery .wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 200px;
+    grid-column-gap:10px; 
+    grid-row-gap:10px; 
+    box-shadow: 10px red; 
+    
+}
+
+.gallery-box {
+    border-radius: 30px;
+    overflow: hidden;
+    box-shadow: 0px 5px 5px red;
+    }
+
+.gallery-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+}
+
+.box1 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.box2 {
+    grid-column-start: 1;
+    grid-row-start: 3;
+    grid-row-end: 5;
+}
+.box3 {
+    grid-column-start: 4;
+    grid-row-start: 3;
+    grid-row-end: 5;
 }
 
 
