--- a/Steck html and Css/styles/style.css
+++ b/Steck html and Css/styles/style.css
@@ -12,7 +12,6 @@ body{
     padding: 0 0;
     margin: 0 0;
     background: #2A7B9B;
-    background: -webkit-linear-gradient(to right, rgb(19, 57, 71) 0%, rgb(26, 58, 40) 50%, rgb(22, 53, 39) 100%);
     background: linear-gradient(to right, rgb(19, 57, 71) 0%, rgb(26, 58, 40) 50%, rgb(22, 53, 39) 100%);
 }
 
@@ -330,7 +329,8 @@ section.form {
 .gallery-box img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     
 }
 
