--- a/Steck html and Css/styles/style.css
+++ b/Steck html and Css/styles/style.css
@@ -10,7 +10,8 @@
 }
 
 body{
-    background: black;
+    background: rgb(209, 210, 210);
+    background: radial-gradient(circle,rgba(5, 9, 71, 1) 0%, rgba(64, 45, 102, 1) 50%, rgba(108, 16, 120, 1) 100%);
 }
 
 a, a:visited {
@@ -188,20 +189,33 @@ main{
 
 
 .etaps {
+    display: flex;
+    width: 100%;
     text-align: center;
 }
 
+.logo_etaps {
+    margin: 0 auto;
+    width: 45%;   
+}
+
+.logo_etaps div {
+    margin-bottom: 25px;  
+}
+
+
 .logo_etaps .slogan{
-    display: flex;
+    width: 35%;
     justify-content: space-around;
     word-wrap: wrap;
     font-family: "Helvetica neue", sans-serif;
     font-size: 56px;
-    font-weight: 800; 
+    font-weight: 700;
+     
       
 }
 
-.logo_etaps .slogan strong{
+.logo_etaps strong{
     font-size: 46px;
     font-weight: 550; 
     font-family: "Helvetica neue", sans-serif;
@@ -210,6 +224,87 @@ main{
     -webkit-text-stroke-color: rgb(255, 255, 255);  
       
 }
+
+.slogan_opisanie{
+    width: 35%;
+    justify-content: space-around;
+    word-wrap: wrap;
+    font-family: "Helvetica neue", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+     
+      
+}
+
+
+
+
+
+
+
+.gallery .wrapper {
+    margin: 0  auto;
+    width: 50%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 100px;
+    grid-column-gap: 10px; 
+    grid-row-gap: 10px; 
+    
+    
+}
+
+.gallery-box {
+    background: rgba(35, 35, 35, 0.37);
+    font-size: 50px;
+    border-radius: 30px;
+    overflow: hidden;
+    padding: 25px;
+     
+    }
+
+
+
+.box1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.box2 {
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 3;
+    grid-row-end: 5;
+}
+
+.box3 {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 4;
+    grid-row-end: 3;
+}
+
+.box4 {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 4;
+    grid-row-end: 7;
+}
+
+.box5 {
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 5;
+    grid-row-end: 7;
+}
+
+
+
+
+
+
 
 
 
